third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/bool/almost-false.stderr
TOML parse error at line 1, column 27
  |
1 | almost-false            = fals
  |                           ^
invalid string
expected `"`, `'`
